# LMS_hack

./: .env  README.md  README.py  alembic.ini  api.json  docker-compose.yml  main.py  pyproject.toml  steps.txt  todo.md
.agent/workflows/: run_app.md
UI/: App.tsx  README.md  config.ts  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
UI/components/: AIChatWidget.tsx  Layout.tsx
UI/pages/: AdminCourseEditor.tsx  AdminTrainings.tsx  Catalog.tsx  CourseDetails.tsx  Dashboard.tsx  LearningScreen.tsx  Login.tsx  MyLearning.tsx  Profile.tsx  Reports.tsx  ShortsLearning.tsx
UI/services/: api.ts  gemini.ts
alembic/: env.py
alembic/versions/: 2025_12_12_1149-211399e393b9_initial_schema.py  2025_12_12_1236-5147f97961d4_make_created_by_id_nullable.py  2025_12_12_1644-6d5c1f7b9520_add_streak_count_to_profiles.py
schemas/: bundle.json
scripts/: README.md  __init__.py  seed_mock_data.py
src/api/routes/: attendance.py  auth.py  badges.py  certifications.py  completions.py  content.py  departments.py  enrollments.py  manager.py  notifications.py  profiles.py  progress.py  reports.py  sessions.py  trainings.py  users.py
src/core/: __init__.py  app.py  config.py  db.py  errors.py  notifications.py  scheduler.py  security.py
src/models/: __init__.py  attendance.py  badge.py  certification.py  completion.py  content.py  department.py  enrollment.py  notification.py  profile.py  progress.py  training.py  user.py
